# cloudmount

./: .gitignore  AGENTS.md  LICENSE  Package.swift  README.md  appcast.xml  project.yml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: fskit-extension-toggle-bug.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-CONTEXT.md
.planning/phases/02-core-mount-browse/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
CloudMount/: AppState.swift  CloudMount.entitlements  CloudMountApp.swift  ExtensionDetector.swift  Info.plist  MountClient.swift  MountMonitor.swift
CloudMount.xcodeproj/: project.pbxproj
CloudMount/Views/: CheckForUpdatesView.swift  MenuContentView.swift  OnboardingView.swift  SettingsView.swift
CloudMountExtension/: B2Item.swift  B2ItemAttributes.swift  B2Volume.swift  B2VolumeOperations.swift  B2VolumeReadWrite.swift  CloudMountExtension.entitlements  CloudMountExtension.swift  CloudMountFileSystem.swift  Info.plist  MetadataBlocklist.swift  StagingManager.swift
CloudMountKit/: CloudMountKit.h
CloudMountKit/B2/: B2AuthManager.swift  B2Client.swift  B2Error.swift  B2HTTPClient.swift  B2Types.swift
CloudMountKit/Cache/: FileCache.swift  MetadataCache.swift
CloudMountKit/Config/: SharedDefaults.swift
CloudMountKit/Credentials/: AccountConfig.swift  CredentialStore.swift  MountConfig.swift
Daemon/CloudMountDaemon/: Cargo.toml
Daemon/CloudMountDaemon/src/: main.rs
Daemon/CloudMountDaemon/src/b2/: client.rs  errors.rs  mod.rs  types.rs
Daemon/CloudMountDaemon/src/cache/: file_cache.rs  metadata.rs  mod.rs
Daemon/CloudMountDaemon/src/fs/: b2fs.rs  handles.rs  inode.rs  mod.rs
Daemon/CloudMountDaemon/src/ipc/: mod.rs  protocol.rs  server.rs
Daemon/CloudMountDaemon/src/mount/: manager.rs  mod.rs
Sources/CloudMount/: CloudMountApp.swift  CredentialStore.swift  DaemonClient.swift  MacFUSEDetector.swift  MenuContentView.swift  SettingsView.swift
homebrew/: cloudmount.rb
scripts/: create-dmg.sh
(+45 files in other folders)
