[package]
name = "cloudmount-daemon"
version = "0.1.0"
edition = "2021"
description = "FUSE daemon for mounting Backblaze B2 buckets"

[dependencies]
# FUSE filesystem (libfuse feature required for macOS)
fuser = { version = "0.16", features = ["libfuse"] }

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "fs", "process", "time"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# HTTP client for B2 API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Unix socket support
nix = { version = "0.29", features = ["net"] }

# Base64 encoding for B2 auth
base64 = "0.22"

# Libc for user/group IDs
libc = "0.2"

[[bin]]
name = "cloudmount-daemon"
path = "src/main.rs"
